--- a/study-planner-app/app/src/main/res/layout/activity_main.xml
+++ b/study-planner-app/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/app_color"
+        android:enabled="false"
         android:text="로그인"
         app:layout_constraintLeft_toRightOf="@id/signButton"
         app:layout_constraintRight_toRightOf="parent"
