--- a/study-planner-app/app/src/main/res/layout/activity_join.xml
+++ b/study-planner-app/app/src/main/res/layout/activity_join.xml
@@ -1,52 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <EditText
-        android:id="@+id/editId"
+        android:id="@+id/editIdJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="아이디를 입력해주세요"
-        app:layout_constraintBottom_toTopOf="@id/editPassword"
+        app:layout_constraintBottom_toTopOf="@id/editPasswordJoin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
-        android:id="@+id/editPassword"
+        android:id="@+id/editPasswordJoin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="비밀번호를 입력해주세요"
-        app:layout_constraintBottom_toTopOf="@id/signButton"
+        app:layout_constraintBottom_toTopOf="@id/editNickNameJoin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editId" />
+        app:layout_constraintTop_toBottomOf="@id/editIdJoin"
+        app:layout_constraintVertical_chainStyle="packed" />
 
-    <Button
-        android:id="@+id/signButton"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/editNickNameJoin"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/app_color"
-        android:text="회원가입"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:hint="닉네임을 입력해주세요"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSuccessJoin"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/loginButton"
-        app:layout_constraintTop_toBottomOf="@id/editPassword" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/editPasswordJoin"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/buttonSuccessJoin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/app_color"
         android:enabled="false"
-        android:text="로그인"
-        app:layout_constraintLeft_toRightOf="@id/signButton"
+        android:text="완료"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editPassword" />
+        app:layout_constraintTop_toBottomOf="@id/editNickNameJoin" />
 </androidx.constraintlayout.widget.ConstraintLayout>
